@@ -171,11 +171,6 @@ yelp_io_free          (GIOChannel    *channel)
 {
     YelpIOChannel *yelp_channel = (YelpIOChannel *) channel;
 
-#ifdef HAVE_LIBBZ2
-    if (yelp_channel->bzin)
-	g_free (yelp_channel->bzin);
-#endif
-
     g_free (yelp_channel);
 }
 
