@@ -1,3 +1,8 @@
+2006-08-30  Don Scorgie  <don@Madaline>
+
+	* src/yelp-io-channel.c: 
+	Don't double free bzip streams
+	
 2006-08-30  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-search-pager.c: 
